# tidus

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  audit_all_missed.txt  audit_neither.txt  audit_report.txt  docker-compose.yml  findings.md  index.html  plan.md  pyproject.toml  review-report.md  revise.md  tidus.db
alembic/: env.py
config/: budgets.yaml  model_descriptions.yaml  models.auto.yaml  models.yaml  policies.yaml  subscribers.yaml
deploy/: Caddyfile.snippet  install.sh  sync_wrapper.sh  tidus-sync.service  tidus-sync.timer  tidus-web.service
docs/: adapters.md  api-reference.md  architecture.md  budgets-and-guardrails.md  caching.md  classification.md  configuration.md  dashboard.md  deployment.md  first-15-minutes.md  hardware-requirements.md  how-to-use.md  index.md  mcp-integration.md  pricing-model.md  pricing-sync.md  pricing.md  quickstart.md  roi-calculator.md  savings-report.md  selection-algorithm.md  troubleshooting.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
monitoring/: README.md  alerting-rules.yaml  grafana-dashboard.json
reports/: discovered_models.json  pricing-2026-04-09.md  pricing-2026-04-10.html  pricing-2026-04-10.md  pricing-2026-04-13.md  pricing-2026-04-14.html  pricing-2026-04-14.md  pricing-2026-04-17.html  pricing-2026-04-17.md  pricing-2026-04-19.html  pricing-2026-04-19.md  pricing-2026-04-20.html  pricing-2026-04-20.md  pricing-2026-04-23.html  pricing-2026-04-23.md  pricing-2026-04-26.html  pricing-2026-04-26.md  pricing-2026-04-29.html  pricing-2026-04-29.md  pricing-2026-05-03.html  pricing-2026-05-03.md  pricing-2026-05-05.html  pricing-2026-05-05.md  pricing-2026-05-06.html  pricing-2026-05-06.md  pricing-2026-05-10.html  pricing-2026-05-10.md  pricing-2026-05-13.html  pricing-2026-05-13.md  pricing-2026-05-17.html  pricing-2026-05-17.md  pricing-2026-05-20.html  pricing-2026-05-20.md  pricing-2026-05-21.html  pricing-2026-05-21.md  pricing-2026-05-24.html  pricing-2026-05-24.md  pricing-2026-05-27.html  pricing-2026-05-27.md  pricing-2026-05-31.html  (+41 more)
scripts/: audit_confidentials.py  backtest_poc_wildchat.py  backtest_recipe_b.py  backtest_trained_encoder.py  backtest_union.py  bench_gemma4_latency.py  benchmark_presidio.py  ensemble_presidio.py  fit_pca_64d.py  generate_pricing_report.py  inspect_all_missed.py  inspect_neither.py  irr_build_external_pack.py  irr_flip_analysis.py  irr_score.py  irr_score_all_axes.py  kfold_recipe_b.py  label_wildchat.py  p1_ablation_all_heads.py  p1_ablation_report.py  p1_step1_baseline.py  p1_step4_postbaseline.py  p1_step5_flag_delta.py  poc_classifier.py  prune_auto_yaml_rules.py  simulate_200_users.py  smoke_discovery.py  train_encoder.py  train_encoder_recipe_b.py  train_encoder_recipe_b_p1.py  tune_presidio.py  uncertainty_sample.py  verify_auto_yaml.py  (+1 more)
(+253 files in other folders)
